--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-ca">
-
 <head>
-  <!-- Set the page title -->
   <title>IRM1005 / ITEC1005 - Midterm Exam</title>
-
-  <!-- Set the charset we're using to UTF-8 -->
   <meta charset="utf-8" />
-
-  <!-- Set the screens default zoom / scale to 1 -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <!-- Specifies the document mode for Internet Explorer -->
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-  <!-- Set the CSS Reset File -->
   <link rel="stylesheet" href="./reset.css" />
-
-  <!-- Set your custom CSS file -->
   <link rel="stylesheet" href="./style.css" />
-
 </head>
 
 <body>
+  <main>
+  <div class="flex-cont">
+    <img class="img" src="./images/coffee.jpg" alt="Cappuccino"/>
+  </div>
+    <h1>Hot Drinks</h1>
+    <h2>Perfect Cappuccino</h2>
+    <p>Induldge in the creamy delight of our Perfect Cappuccino. This exquisite coffee creation combines a shot of rich espresso with equal parts of steamed milk and silky microfoam, resulting in a delightful balance of flavour and texture.</p>
+    <h3>$4.99</h3>
+    <input class="button" type="submit" value="Buy Now!"/>
+  </main>
+</body>
+</html>
+
   <!--
 
     WELCOME TO THE MIDTERM EXAM!
